Bug 393306 - Horizontal spacing between icons increases when previews are turned on for >96px icons
Summary: Horizontal spacing between icons increases when previews are turned on for >9...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: icons mode (other bugs)
Version First Reported In: 18.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2018-04-19 19:05 UTC by Nate Graham
Modified: 2018-04-19 20:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2018-04-19 19:05:22 UTC
Steps to Reproduce:
1. Open Dolphin and its Settings window
2. Go to View Modes > Icons and set both sliders to "96 pixels"
3. Toggle inline previews on and off

The horizontal spacing between icons increases when previews are turned on. This only happens with >96px icons.
Comment 1 Nate Graham 2018-04-19 19:55:24 UTC
Another symptom is that for icon sizes smaller than 96px, the icons "wiggle" a little bit when previews are toggled on and off.

Here's a patch that fixes the issue: https://phabricator.kde.org/D12362
Comment 2 Nate Graham 2018-04-19 20:52:38 UTC
Git commit e15d9f266b662cdbed1a9f07b9686fd79a31d929 by Nathaniel Graham.
Committed on 19/04/2018 at 20:52.
Pushed by ngraham into branch 'Applications/18.04'.

Fix inconsistent preview spacing and icon wiggly-ness when toggling previews in Icon mode

Summary:
Dolphin had some code to change the grid spacing when previews were toggled, in an attempt to optimize the view for 3:2 landscape photos. This was problematic for many reasons:
- Conceptually, it was a bad idea to optimize the view for one specific use case. Previews are useful for more than just landscape photos, and this optimization would be inapplicable to any other set of files.
- Folders entirely full of images commonly have some portrait-orientation images included too, so even if the goal were appropriate, it was a bad idea to optimize for only having landscape images.
- For small sizes and medium icons (< 96px), the preview grid size was virtually identical to the non-preview grid size, so it had essentially no effect, and only made the icons wiggle strangely when previews were toggled.
- For large large sizes (>= 96px), all it did was unnecessarily increase the horizontal grid spacing, actually //reducing// usability for browsing through folders of images.

Therefore, let's just remove this code.
FIXED-IN: 18.04.1

Test Plan:
- Go to {nav Settings > View Modes > Icons} and make the icon size and preview size identical for 64px
- Toggle previews on and off
- Change both sizes to 112x
- Toggle previews on and off

In both cases, the grid spacing does not change and the icons do not wiggle strangely. The only visual change is that previews turn on or off.

Dolphin still works fine for viewing  3:2 landscape photos. 80px icons:
{F5813467}

192px icons:
{F5813465}

In fact, it's vastly //improved// for the >=96px use case since the grid spacing is no longer excessively wide

Reviewers: #dolphin, hein

Reviewed By: hein

Subscribers: broulik

Differential Revision: https://phabricator.kde.org/D12362

M  +0    -8    src/views/dolphinitemlistview.cpp

https://commits.kde.org/dolphin/e15d9f266b662cdbed1a9f07b9686fd79a31d929